Prevent Crostini install if offline.

Since installing crostini involved downloading around 300MB, we
prevent the install flow from proceeding if we're offline.

Added a browser test with ExtraParts support.

Bug: 843065
Change-Id: Ia0049d4ec30ac79c585d129e05aa2240eeecba09
Reviewed-on: https://chromium-review.googlesource.com/1107419
Reviewed-by: Ben Wells <benwells@chromium.org>
Commit-Queue: Nicholas Verne <nverne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568754}
Former-commit-id: 2da5753ab77e42d9ae63471df2cab5f1d6543346